# ProyectoTopicos-I

./: .gitignore  CHANGELOG.md  LICENSE  ProyectoTopicosI.cabal
app/: Main.hs  MainConsole.hs
src/: Life.hs
