cabal-version:   3.0
name:            ProyectoTopicosI
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          JPol0
maintainer:      160655545+JPol0@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable ProyectoTopicosI
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0,
                        threepenny-gui >=0.9
    hs-source-dirs:   app
    default-language: GHC2021
